# talent_graph

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  graph_discovery_engine_foundational_vision.md  pyproject.toml  ruff.toml  talent_graph_detailed_design.md
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_repo_contributors.py  0003_add_entity_links_status_index.py  0004_add_embeddings.py  0005_add_shortlists.py  0006_add_prestige_orgs.py  0007_add_saved_searches.py  0008_add_ranking_signals.py
frontend/: biome.json  package.json  playwright.config.ts  vitest.config.ts
frontend/__tests__/: GraphLegend.test.tsx  api.test.ts  graph-utils.test.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: AddToShortlistButton.tsx  CandidateCard.tsx  DiscoveryResults.tsx  ForceGraph.tsx  GraphLegend.tsx  PersonBrief.tsx  SavedSearchCard.tsx  SearchBar.tsx  SearchResults.tsx  ShortlistCard.tsx
frontend/e2e/: admin-flow.spec.ts  graph-flow.spec.ts  saved-searches.spec.ts  search-flow.spec.ts  shortlist-flow.spec.ts
frontend/lib/: api.ts  graph-utils.ts
frontend/types/: index.ts
tests/: conftest.py  factories.py
tests/fixtures/: github_contributors.json  github_repo.json  github_user.json  openalex_work.json
tests/integration/: conftest.py  test_api_admin.py  test_api_discovery.py  test_api_graph.py  test_api_health.py  test_api_lookalike.py  test_api_person.py  test_api_rate_limit.py  (+5 more)
(+87 files in other folders)
